Bug fixing Removed lombok Added some integration tests